# bevy-multiplayer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: border_1px_white.aseprite
assets/shaders/: grass_desert.wgsl  tracer.wgsl  water.wgsl
src/: anim.rs  chunk.rs  client.rs  game.rs  ik.rs  main.rs  message.rs  netcode.rs  proc.rs  server.rs  test.rs  utils.rs
src/message/: client.rs  mod.rs  server.rs  spawn.rs
src/shared/: cond.rs  console.rs  ik.rs  mod.rs  objects.rs  physics.rs  render.rs  scenes.rs  tick.rs
src/shared/objects/: ball.rs  gizmo.rs  grounded.rs  gun.rs  health.rs  mod.rs  player.rs  tracer.rs  worm.rs
src/shared/objects/player/: client.rs  mod.rs  server.rs  spawn.rs
src/shared/proc/: biome.rs  chunk.rs  grassy_desert.rs  mod.rs  rock.rs  shaders.rs  tree.rs  utils.rs
src/ui/: mod.rs
