[package]
name = "lightyear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["serialize"] }
bevy_renet = { version = "0.0.11", features = ["serde"] }
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
