[package]
name = "lightyear"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["serialize", "bevy_dev_tools"] }
bevy_renet = { version = "0.0.12", features = ["serde"] }
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
bevy-inspector-egui = { version = "0.27" }
noise = "0.9.0"
image = "0.24.2"
rand_chacha = "0.3.1"
bevy_hanabi = "0.13"
bevy_mod_billboard = "0.7.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
